--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: hanja list
+title: HANJA LIST
 email: currentkorean@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Advance your Korean by learning hanja
 baseurl: "/hanja" # the subpath of your site, e.g. /blog
 url: "https://currentkorean.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: currentkorean
 github_username:  currentkorean
 
 # Build settings
-theme: minima
+# Removed minima theme as it is now a regular theme
+# theme: minima
 plugins:
   - jekyll-feed
 
