--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: HANJA LIST
-email: currentkorean@gmail.com
+email: hanjalist@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Advance your Korean by learning hanja
 baseurl: "/hanja" # the subpath of your site, e.g. /blog
-url: "https://currentkorean.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.hanjalist.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: currentkorean
 github_username:  currentkorean
 
