--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Advance your Korean by learning hanja
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.hanjalist.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: currentkorean
+# twitter_username: currentkorean
 github_username:  currentkorean
 
 # Build settings
