--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: HANJA LIST
-author: A passion project by Minna
+author: A project by Minna
 email: hanjalist@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Quickly advance your Korean vocabulary by learning hanja
